--- a/pkg/proto/proto_dir.cfg
+++ b/pkg/proto/proto_dir.cfg
@@ -1,6 +1,5 @@
 
 all_proto=(
-            message_cms/message_cms.proto
             admin_cms/admin_cms.proto
             statistics/statistics.proto
             auth/auth.proto
@@ -16,4 +15,5 @@ all_proto=(
             office/office.proto
             cache/cache.proto
             organization/organization.proto
+            encryption/encryption.proto
 )
